Add AlertFactory and adjust the usage, first TaskPane logic update